v6.7.8 7th March 2023
  - The latest version of ABI v13 is v13.5.0.
  - The latest version of ABI v12 is v12.11.2.
  - The 'wheel-includes' value of the 'tool.sip.project' section of
    pyproject.toml now supports the use of absolute file patterns.
  - Bug fixes.

v6.7.7 4th February 2023
  - Bug fixes.

v6.7.6 25th January 2023
  - The latest version of ABI v13 is v13.4.1.
  - The latest version of ABI v12 is v12.11.1.
  - Significantly reduced the memory requirements.
  - Bug fixes.

v6.7.4 29th October 2022
  - Bug fixes.

v6.7.3 27th October 2022
  - Bug fixes.

v6.7.2 12th October 2022
  - Bug fixes.

v6.7.1 5th October 2022
  - Bug fixes.

v6.7.0 17th September 2022
  - Added the /NoAssignmentOperator/, /NoCopyCtor/ and /NoDefaultCtor/ mapped
    type annotations.
  - Added the --generator-version command line option to sip-distinfo.
  - Added the 'generator_version' argument to
    Project.get_sip_distinfo_command_line().
  - The resolver/transform stage has been replaced with a pure Python
    implementation.
  - Bug fixes.

v6.6.2 6th June 2022
  - Enums created with ABI v13 now handle unexpected values by creating
    corresponding pseudo-members.
  - Any config settings passed by a PEP 571 frontend are now used.
  - The 'array' type is now accessible from the sip module.
  - 'array' can now create one dimensional arrays of wrapped types that can be
    modified in situ.
  - Arguments using the /Array/ (and /ArraySize/) annotations will now accept
    'array' objects of the corresponding type.
  - The latest version of ABI v13 is v13.4.0.
  - The latest version of ABI v12 is v12.11.0.
  - Bug fixes.

v6.6.1 13th April 2022
  - The latest version of ABI v13 is v13.3.1.
  - The latest version of ABI v12 is v12.10.1.
  - Bug fixes.

v6.6.0 1st April 2022
  - Python v3.6 is no longer supported.
  - The .sip file parser (created using flex and bison) has been replaced with
    a pure Python implementation using PLY.