@@ -1,4 +1,4 @@
-# Copyright (c) 2022, Riverbank Computing Limited
+# Copyright (c) 2023, Riverbank Computing Limited
 # All rights reserved.
 #
 # This copy of SIP is licensed for use under the terms of the SIP License
@@ -51,7 +51,8 @@ setup(
         version=version,
         license='SIP',
         python_requires='>=3.7',
-        install_requires=['packaging', 'ply', 'setuptools', 'toml'],
+        install_requires=['packaging', 'ply', 'setuptools',
+                'tomli;python_version<"3.11"'],
         packages=find_packages(),
         package_data={
             'sipbuild.module': ['source/*/*'],
