@@ -3,6 +3,9 @@ v6.7.8 7th March 2023
   - The latest version of ABI v12 is v12.11.2.
   - The 'wheel-includes' value of the 'tool.sip.project' section of
     pyproject.toml now supports the use of absolute file patterns.
+  - Replaced the use of the 'toml' package with the standard library 'tomlib'
+    package for Python v3.11 and later, and the 'tomli' package for earlier
+    versions of Python.
   - Bug fixes.
 
 v6.7.7 4th February 2023
